Fix sidebar links alignment; mute footer; increase Press spacing

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -234,8 +234,6 @@
 
   @include breakpoint($large) {
     display: block;
-    width: 75%;
-    margin-left: auto;
     margin-top: 2em;
   }
 
